--- a/src/templates/index.jinja2
+++ b/src/templates/index.jinja2
@@ -2,6 +2,7 @@
 <html lang="">
 <head>
   <title>Test application</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
