Adding css and react geosuggest for location

--- a/src/templates/index.jinja2
+++ b/src/templates/index.jinja2
@@ -5,6 +5,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='geosuggest.css') }}">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_P095WQHrPvPg-4JC5UInti_OIlPaVlQ&libraries=places"></script>
 </head>
 <body>
 <div id="app"></div>
