--- a/src/templates/index.jinja2
+++ b/src/templates/index.jinja2
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='geosuggest.css') }}">
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_P095WQHrPvPg-4JC5UInti_OIlPaVlQ&libraries=places"></script>
 
 </head>
