--- a/src/templates/index.jinja2
+++ b/src/templates/index.jinja2
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="">
 <head>
-  <title>Test application</title>
+  <title>Vantage</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
