--- a/src/templates/index.jinja2
+++ b/src/templates/index.jinja2
@@ -8,8 +8,9 @@
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='geosuggest.css') }}">
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://ih1.redbubble.net/image.195485388.5310/flat,800x800,075,f.jpg"/>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_P095WQHrPvPg-4JC5UInti_OIlPaVlQ&libraries=places"></script>
-
 </head>
 <body>
 <div id="app"></div>
