Taking out pepe and making the portal a little more responsive

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -13,7 +13,7 @@
 
 .recommendation-panel-card {
   height: 1100px;
-  width: 500px !important;
+  width: 27% !important;
 }
 
 /* Center text in the circle, and hide any overflow */
