--- a/src/static/style.css
+++ b/src/static/style.css
@@ -36,6 +36,7 @@
   justify-content: space-around;
   border-radius: 50%;
   will-change: left, top, height, width;
+
 }
 
 /* Show the overflow when hovering over a label */
@@ -60,6 +61,11 @@
 /* Make sure to unhide the text when hovering */
 .bubble-chart-container .bubble-chart-text .bubble-label.small:hover {
   font-size: 0.8em;
+}
+
+.bubble-chart-container .bubble-chart-text .bubble-label.medium {
+  border-style: solid;
+  border-color: rgb(0, 188, 212);
 }
 
 /*
